update pro_wrapper